--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,42 @@
 /*  your css code here. If applicable */
+body{
+	background-color:rgb(135, 206, 235);
+}
+/* .first-child{
+	color:white;
+	background-color:black;
+} */
+ div p:first-child {
+		color:white;
+	background-color:black; 
+ }
+div p:nth-child(2){
+	
+}
+div p:last-child{
+	color:red;
+}
+
+ul li{
+	background-color:gray;
+	width:50%;
+	padding:10px;
+}
+
+ul li:nth-child(odd){
+	background-color:white;
+	
+}
+
+ul li:first-child,
+ul li:last-child {
+  font-size: 22px;
+}
+
+ul li:nth-last-child(3) {
+  background: pink;
+}
+
+
+
+
