--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,9 @@
 body{
 	background-color:rgb(135, 206, 235);
 }
-/* .first-child{
-	color:white;
-	background-color:black;
-} */
+.red{
+	color:red;
+}
  div p:first-child {
 		color:white;
 	background-color:black; 
